--- a/contrib/boost-cmake/CMakeLists.txt
+++ b/contrib/boost-cmake/CMakeLists.txt
@@ -30,5 +30,14 @@ target_include_directories (boost_internal BEFORE PUBLIC ${Boost_INCLUDE_DIRS})
 
 target_compile_definitions (boost_internal PUBLIC BOOST_SYSTEM_NO_DEPRECATED)
 
+target_compile_definitions (boost_internal PUBLIC BOOST_NO_CXX98_FUNCTION_BASE)
+
+if (COMPILER_CLANG)
+    target_compile_options (boost_internal PRIVATE "-Wno-unused-but-set-variable")
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 15)
+        target_compile_options (boost_internal PRIVATE "-Wno-deprecated-builtins")
+    endif()
+endif()
+
 target_link_libraries (boost_internal boost_fiber boost_context)
 
