--- a/contrib/re2-cmake/CMakeLists.txt
+++ b/contrib/re2-cmake/CMakeLists.txt
@@ -33,7 +33,9 @@ set(RE2_SOURCES
 
 add_library(re2 ${RE2_SOURCES})
 target_include_directories(re2 PUBLIC "${SRC_DIR}")
-target_compile_options(re2 PRIVATE "-Wno-unused-but-set-variable")
+if (COMPILER_CLANG AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 15)
+    target_compile_options(re2 PRIVATE "-Wno-unused-but-set-variable")
+endif ()
 
 # Building re2 which is thread-safe and re2_st which is not.
 # re2 changes its state during matching of regular expression, e.g. creates temporary DFA.
@@ -44,7 +46,9 @@ add_library(re2_st ${RE2_SOURCES})
 target_compile_definitions (re2_st PRIVATE NDEBUG NO_THREADS re2=re2_st)
 target_include_directories (re2_st PRIVATE .)
 target_include_directories (re2_st SYSTEM PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${SRC_DIR})
-target_compile_options(re2_st PRIVATE "-Wno-unused-but-set-variable")
+if (COMPILER_CLANG AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 15)
+    target_compile_options(re2_st PRIVATE "-Wno-unused-but-set-variable")
+endif ()
 
 file (MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/re2_st)
 foreach (FILENAME filtered_re2.h re2.h set.h stringpiece.h)
