--- a/contrib/boost-cmake/CMakeLists.txt
+++ b/contrib/boost-cmake/CMakeLists.txt
@@ -34,11 +34,9 @@ target_compile_definitions (boost_internal PUBLIC BOOST_NO_CXX98_FUNCTION_BASE)
 
 target_compile_definitions (boost_internal PUBLIC BOOST_BIND_GLOBAL_PLACEHOLDERS)
 
-if (COMPILER_CLANG AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 15)
-    target_compile_options (boost_internal PRIVATE "-Wno-unused-but-set-variable")
-    target_compile_options (boost_internal PRIVATE "-Wno-deprecated-builtins")
-    target_compile_options (boost_internal PRIVATE "-Wno-non-virtual-dtor")
-endif()
+target_no_warning(boost_internal unused-but-set-variable)
+target_no_warning(boost_internal deprecated-builtins)
+target_no_warning(boost_internal non-virtual-dtor)
 
 target_link_libraries (boost_internal boost_fiber boost_context)
 
