--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,11 +2,7 @@
 {
   "name": "TiFlash",
   "build": {
-    "dockerfile": "Dockerfile",
-    "args": {
-      "CLANG_VERSION": "14",
-      "CMAKE_VERSION": "3.22.6"
-    }
+    "dockerfile": "Dockerfile"
   },
   "hostRequirements": {
     "cpus": 2,
@@ -14,17 +10,18 @@
   },
   "mounts": [
     // Avoid reinstalling vscode extensions
-    "source=tiflash-vscode-extensions,target=/home/vscode/.vscode-server/extensions,type=volume",
+    "type=volume,source=tiflash-vscode-extensions,target=/root/.vscode-server/extensions",
     // Cache Cargo downloaded deps
-    "source=tiflash-cargo-registry,target=/home/vscode/.cargo/registry,type=volume",
-    "source=tiflash-cargo-git,target=/home/vscode/.cargo/git,type=volume",
+    "type=volume,source=tiflash-cargo-registry,target=/root/.cargo/registry",
+    "type=volume,source=tiflash-cargo-git,target=/root/.cargo/git",
     // Cache Rust toolchain
     // We have to cache the entire directory due to https://github.com/rust-lang/rustup/issues/1239
-    "source=tiflash-rustup,target=/home/vscode/.rustup,type=volume",
+    "type=volume,source=tiflash-rustup,target=/root/.rustup",
     // Cache ccache results
-    "source=tiflash-ccache,target=/home/vscode/.cache/ccache,type=volume",
+    "type=volume,source=tiflash-ccache,target=/root/.cache/ccache",
+    // Persist GitHub CLI Config locally in the repository
+    "type=bind,source=${localWorkspaceFolder}/.devcontainer/.local_persist/gh,target=/root/.config/gh"
   ],
-  "remoteUser": "vscode",
   // For using a ptrace-based debugger like C++, Go, and Rust
   "runArgs": [
     "--cap-add=SYS_PTRACE",
@@ -36,11 +33,14 @@
       "extensions": [
         "llvm-vs-code-extensions.vscode-clangd", // C++ Code Completion
         "jeff-hykin.better-cpp-syntax", // C++ Syntax
+        "matepek.vscode-catch2-test-adapter", // Run gtests in UI
         "twxs.cmake",
         "ms-vscode.cmake-tools", // CMake actions in UI
         "bungcip.better-toml", // TOML Syntax highlighting
+        "eamodio.gitlens", // Enable more git features
       ],
       "settings": {
+        "git.detectSubmodulesLimit": 40,
         "cmake.buildDirectory": "${workspaceFolder}/cmake-build-${buildType}",
         "cmake.statusbar.visibility": "compact",
         "cmake.statusbar.advanced": {
@@ -51,11 +51,12 @@
             "visibility": "icon"
           }
         },
-        "clangd.path": "clangd-14",
         "clangd.arguments": [
           "--compile-commands-dir=cmake-build-Debug"
         ],
         "cmake.generator": "Ninja",
+        "cmake.configureOnOpen": true,
+        "testMate.cpp.test.executables": "cmake-build-*/**/gtests_*",
         "terminal.integrated.defaultProfile.linux": "zsh"
       }
     }
